# n2t-rs

./: .gitignore
n2t_rust/: CLAUDE.md  Cargo.toml  README.md
n2t_rust/grammars/: asm.js  hdl.js  vm.js
n2t_rust/src/: error.rs  lib.rs
n2t_rust/src/chip/: builder.rs  bus.rs  chip.rs  clock.rs  mod.rs  pin.rs  sequential_tests.rs  subbus.rs  tests.rs
n2t_rust/src/chip/builtins/: mod.rs
n2t_rust/src/chip/builtins/arithmetic/: add16.rs  alu.rs  and16.rs  full_adder.rs  half_adder.rs  inc16.rs  mod.rs  mux16.rs  not16.rs  or16.rs
n2t_rust/src/chip/builtins/computer/: keyboard.rs  mod.rs  rom32k.rs  screen.rs
n2t_rust/src/chip/builtins/logic/: and.rs  dmux.rs  dmux_multi.rs  mod.rs  mux.rs  nand.rs  not.rs  or.rs  xor.rs
n2t_rust/src/chip/builtins/sequential/: bit.rs  dff.rs  memory.rs  mod.rs  pc.rs  ram16k.rs  ram4k.rs  ram512.rs  ram64.rs  ram8.rs  register.rs
n2t_rust/src/chip/tests/: alu_tests.rs  builder_integration.rs  combinatorial.rs  hdl_integration.rs  memory_tests.rs  mod.rs  pin_parsing.rs  sequential.rs  wide_ops.rs  wire_connections.rs
n2t_rust/src/cpu/: alu.rs  cpu.rs  memory.rs  mod.rs
n2t_rust/src/languages/: assembly.rs  hdl.rs  jack.rs  mod.rs  tst.rs  vm_lang.rs
n2t_rust/src/test/: chiptst.rs  chiptst_tests.rs  comparator.rs  harness.rs  mod.rs  runner.rs
n2t_rust/src/vm/: builtins.rs  memory.rs  mod.rs  vm.rs
